# goit-pythonweb-hw-12

./: .coverage  .env  .gitignore  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py  db.rst  index.rst  security.rst  settings.rst
docs/source/repository/: contacts_repository.rst  index.rst  users_repository.rst
docs/source/routers/: auth_api.rst  contacts_api.rst  health_api.rst  index.rst  user_api.rst
docs/source/services/: auth_services.rst  cloudinary_services.rst  contacts_services.rst  email_services.rst  index.rst  redis_services.rst  user_services.rst
migrations/: env.py
migrations/versions/: 16fba0065585_add_role_to_users.py  cc5bc94042a5_add_to_model_user_filed_confirmed.py  dea87b69c5c6_add_user_role.py  e9e0837031bd_initial_migration.py
src/: schemas.py
src/api/: auth.py  contacts.py  health.py  users.py
src/config/: settings.py
src/core/: logger.py
src/database/: db.py  models.py
src/dependencies/: cloudinary_dep.py  role_dep.py
src/middleware/: security.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cloudinary_service.py  contacts.py  email.py  redis_cache.py  users.py
src/services/templates/: reset_password.html
tests/: conftest.py
tests/repositories/: test_contacts.py  test_users.py
tests/services/: test_auth.py  test_cloudinary_service.py  test_email_service.py  test_redis_service.py  test_users_service.py
